VR: Fix cursor draw order.

Prior to this CL, the cursor was always drawn last, meaning it could not be seen through transparent objects.
This CL draws the cursor after the object it's supposed to be sitting on, so that transparencies work as expected.

BUG=721390

Review-Url: https://codereview.chromium.org/2869273008
Cr-Commit-Position: refs/heads/master@{#471321}

Former-commit-id: 39500a44e5e31f81001ddc4f718344fb593401a5