chrome/browser/android/vr_shell/vr_shell_gl.h
@@ -120,11 +120,14 @@ class VrShellGl : public device::mojom::VRVSyncProvider {
                   int viewport_offset,
                   bool draw_cursor);
   void DrawElements(const vr::Mat4f& view_proj_matrix,
-                    const std::vector<const UiElement*>& elements);
+                    const std::vector<const UiElement*>& elements,
+                    bool draw_cursor);
+  void DrawElement(const vr::Mat4f& view_proj_matrix, const UiElement& element);
   std::vector<const UiElement*> GetElementsInDrawOrder(
       const vr::Mat4f& view_matrix,
       const std::vector<const UiElement*>& elements);
-  void DrawCursor(const vr::Mat4f& render_matrix);
+  void DrawReticle(const vr::Mat4f& view_proj_matrix);
+  void DrawLaser(const vr::Mat4f& view_proj_matrix);
   void DrawController(const vr::Mat4f& view_proj_matrix);
   bool ShouldDrawWebVr();
   void DrawWebVr();
@@ -218,7 +221,7 @@ class VrShellGl : public device::mojom::VRVSyncProvider {
 
   // TODO(mthiesse): We need to handle elements being removed, and update this
   // state appropriately.
-  UiElement* cursor_render_target_ = nullptr;
+  UiElement* reticle_render_target_ = nullptr;
   UiElement* hover_target_ = nullptr;
   // TODO(mthiesse): We shouldn't have a fling target. Elements should fling
   // independently and we should only cancel flings on the relevant element
